Added map. Fixed bug when some coordinates led to places without city name and country code values in weather API responses.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.3.0'
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
+
+    //Google maps
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 }
